# pingpong

./: .coderabbit.yaml  .gitignore  assistant-templates.md  create-worktree.sh  log.md  pyproject.toml  remove-worktree.sh  test_config.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 01-bug-report.yaml  02-suggestion.yaml
.github/workflows/: claude-code-review.yml  claude.yml  create-release.yml  fe.yml  python.yml  release.yml  staging-pr-build.yml
alembic/: env.py
alembic/versions/: 337b7d1fe811_add_user_connectors.py  4209ab7d4b7b_add_panopto_integration_fields.py  4c1b8a7d5e6f_add_institution_lecture_video_default_keys.py  4d7f7f5c1c12_add_lecture_video_processing_runs.py  6812f442bbbb_updates_to_support_lecture_video_.py  7cb4d6c2b8f1_persist_lecture_video_progress.py  a7b3c4d5e6f7_refactor_internal_mcp_tools.py  ff54a796106b_add_lecture_chat_manifest_storage_and_.py
pingpong/: __main__.py  ai.py  ai_models.py  assistant_service.py  config.py  copy.py  elevenlabs.py  emails.py  errors.py  files.py  lecture_video_chat.py  lecture_video_processing.py  lecture_video_runtime.py  lecture_video_service.py  models.py  panopto.py  schemas.py  server.py  test_ai_build_response_input_item_list.py  test_assistant_private_file_deletion.py  test_class_credentials.py  test_connectors_base.py  test_connectors_panopto.py  test_connectors_server.py  test_course_bridge.py  test_emails.py  test_export_tool_call_reports.py  test_lecture_video_chat.py  test_lecture_video_server.py  test_merge_lecture_video.py  test_migrations_m07_backfill_lecture_video_content_lengths.py  test_migrations_m08_cleanup_invalid_lecture_video_schema_rows.py  test_models_threads.py  test_multi_message.py  test_panopto.py  test_server.py  test_video_store.py  test_voice_mode_v3.py  video_store.py  worker_pool.py
pingpong/authz/: authz.fga  authz.fga.json
pingpong/connectors/: __init__.py  base.py  exceptions.py  panopto.py  state.py
pingpong/lti/: constants.py  course_bridge.py
pingpong/migrations/: m07_backfill_lecture_video_content_lengths.py
web/pingpong/: package.json  pnpm-lock.yaml
web/pingpong/src/: app.css  app.html
web/pingpong/src/lib/: api.test.ts  api.ts  institutionDefaultApiKeys.test.ts  institutionDefaultApiKeys.ts  markdown-segments.test.ts  markdown-segments.ts  markdown.test.ts  markdown.ts  mermaid.ts  purify.test.ts  svg.test.ts  svg.ts
web/pingpong/src/lib/actions/: scroll.ts
web/pingpong/src/lib/components/: AssistantTemplateSelector.svelte  ChatInput.svelte  CourseBridgeSyncBadge.svelte  DropdownContainer.svelte  DropdownHeader.svelte  DropdownOption.svelte  Markdown.svelte  MermaidDiagram.svelte  MermaidStreaming.svelte  PingPongDemoCarousel.svelte  SvgDiagram.svelte  ThreadDetailPage.svelte  ThreadHeader.svelte  ThreadLandingPage.svelte  ViewAssistant.svelte
web/pingpong/src/lib/components/lecture-video/: LectureVideoChatPanel.svelte  LectureVideoCompletedView.svelte  LectureVideoPlayer.svelte  LectureVideoQuestionCard.svelte  LectureVideoQuestionGallery.svelte  LectureVideoQuestionSidebar.svelte  LectureVideoView.svelte
web/pingpong/src/lib/stores/: thread.test.ts  thread.ts
web/pingpong/src/lib/wavtools/lib/: wav_stream_player.test.ts  wav_stream_player.ts
web/pingpong/src/routes/: +layout.svelte  +layout.ts
web/pingpong/src/routes/admin/createGroup/: +page.svelte
web/pingpong/src/routes/admin/institutions/[id]/: +page.svelte
web/pingpong/src/routes/group/[classId]/assistant/: +page.svelte
web/pingpong/src/routes/group/[classId]/assistant/[assistantId]/: +page.svelte  +page.ts
web/pingpong/src/routes/group/[classId]/manage/: +page.svelte  +page.ts
web/pingpong/src/routes/group/[classId]/shared/thread/[threadId]/: +page.ts
web/pingpong/src/routes/group/[classId]/thread/[threadId]/: +page.ts
web/pingpong/src/routes/lti/setup/link/: +page.svelte
web/pingpong/src/routes/profile/: +page.svelte  +page.ts
