[project]
name = "pingpong"
version = "7.32.1"
description = "A software platform carefully designed for AI-driven learning."
readme = "README.md"
requires-python = ">= 3.11, <4.0.0"
authors = [
    { name = "Joe Nudell", email = "jnudell@hks.harvard.edu" },
    { name = "Evangelos Kassos", email = "github@evangeloskassos.com" }
]
license = "MIT"
dependencies = [
    "aioboto3 >= 15.5.0, < 16.0.0",
    "aiohttp >= 3.13.3, < 4.0.0",
    "aiosmtplib >= 5.1.0, < 6.0.0",
    "aiosqlite >= 0.22.1, < 1.0.0",
    "alembic >= 1.18.4, < 2.0.0",
    "arrow >= 1.4.0, < 2.0.0",
    "asyncpg>=0.31.0,<1.0.0",
    "audioop-lts >= 0.2.2, <1.0.0 ; python_full_version >= '3.13'",
    "azure-communication-email >= 1.1.0, < 2.0.0",
    "beautifulsoup4 >= 4.14.3, < 5.0.0",
    "cryptography >= 46.0.5, < 47.0.0",
    "discord-py >= 2.6.4, < 3.0.0",
    "elevenlabs >= 2.39.0, < 3.0.0",
    "email-validator >= 2.3.0, < 3.0.0",
    "fastapi [standard] >= 0.129.0, < 1.0.0",
    "google-genai [aiohttp] >= 1.67.0, < 2.0.0",
    "httpx == 0.28.1",
    "humanize >= 4.15.0, < 5.0.0",
    "mmh3 >= 5.2.0, < 6.0.0",
    "openai [realtime] >= 2.26.0, < 3.0.0",
    "openfga-sdk==0.10.0",
    "opentelemetry-api >= 1.20.0, < 2.0.0",
    "opentelemetry-sdk >= 1.23.0, < 2.0.0",
    "orjson >= 3.11.7, < 4.0.0",
    "psycopg2-binary>=2.9.11,<3.0.0",
    "pybase64 >= 1.4.3, < 2.0.0",
    "pydantic >= 2.12.5, < 3.0.0",
    "pydantic-settings >= 2.12.0, < 3.0.0",
    "pydub >= 0.25.1, < 1.0.0",
    "pyjwt >= 2.12.0, < 3.0.0",
    "python-glowplug >= 0.3.12, < 1.0.0",
    "python3-saml >= 1.16.0, < 2.0.0",
    "pytz >= 2025.2, < 2027.0",
    "requests >= 2.32.5, < 3.0.0",
    "sentry-sdk >= 2.52.0, < 3.0.0",
    "sqlalchemy [asyncio] >= 2.0.46, < 3.0.0",
    "starlette >= 0.52.1, < 2.0.0",
    "tqdm >= 4.67.3, < 5.0.0",
    "uuid-utils >= 0.14.0, < 1.0.0",
    "uvicorn >= 0.40.0, < 1.0.0",
]

[project.urls]
Homepage = "https://pingpong.hks.harvard.edu/"
Repository = "https://github.com/comppolicylab/pingpong.git"
Issues = "https://github.com/comppolicylab/pingpong/issues"
ReleaseNotes = "https://github.com/comppolicylab/pingpong/releases"

[dependency-groups]
dev = [
    "locust >= 2.43.3, < 3.0.0",
    "pre-commit >= 4.5.0, < 5.0.0",
    "pytest >= 9.0.2, < 10.0.0",
    "pytest-asyncio >= 1.3.0, < 2.0.0",
]
